@@ -1,5 +1,5 @@
 #!@PYTHON@ -t
-"""$Id: pydb.py.in,v 1.89 2006/07/09 00:43:09 rockyb Exp $
+"""$Id: pydb.py.in,v 1.90 2006/07/10 08:11:49 rockyb Exp $
 A Python debugger. Contains user-callable routines, e.g.
 run, set_trace, runevel.
 
@@ -32,6 +32,12 @@ def init():
     program = os.path.basename(sys.argv[0])
 
 class Pdb(Gdb):
+
+    """A debugger class for Python that resembles the gdb (GNU
+    debugger) command set. Really we just inherit everything from the
+    Gdb class, but we keep the name Pdb to be compatible with the stock
+    Python debugger's (pdb's) Pdb class."""
+
     def __init__(self, completekey='tab', stdin=None, stdout=None):
         Gdb.__init__(self, completekey, stdin, stdout)
 
